<resources>
    <string name="app_name">Mejia Asociados</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search Videos</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="error_player">Error playing video</string>
    <string name="title_activity_vimeo">VimeoActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="service_not_available">Couldn\'t fetch Location</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="mail">Correo</string>
    <string name="phone">Teléfono</string>
    <string name="email">e-mail</string>
    <string name="like"><u>Like</u></string>
    <string name="dislike"><u>Dislike</u></string>
</resources>
